--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
 
 <p>#set ($tiny_url = $tinyURLTools.getTinyURL($!friendly_url, $theme_display))</p>
 
-<div>
-        
-    </div>
-
+<p>&lt;div class="tiny-url-wrapper"&gt; &lt;input readonly="true" value="$!tiny_url" /&gt; &lt;/div&gt;</p>
 </blockquote>
 
-<p>The resulting Tiny URLs have the format http(s):///t/xyzabc.</p>
+<p>The resulting Tiny URLs have the format portal_url/t/xyzabc.</p>
 
 <p>Similar code can be used a JSP page. Note that the TinyURLTools class expects the flattened ThemeDisplay object available in a web content template, so we have to construct one:</p>
 
