Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <p>#set ($tiny_url = $tinyURLTools.getTinyURL($!friendly_url, $theme_display))</p>
 
-<p>&lt;div class="tiny-url-wrapper"&gt; &lt;input readonly="true" value="$!tiny_url" /&gt; &lt;/div&gt;</p>
+<p>&lt;div&gt; &lt;input readonly="true" value="$!tiny_url" /&gt; &lt;/div&gt;</p>
 </blockquote>
 
 <p>The resulting Tiny URLs have the format portal_url/t/xyzabc.</p>
