Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@ lisher showing that asset as full content.</p>
 
 <p>Notes:</p>
 
-<ol>
-<li>Not all the weird and wonderful formats of friendly URL are supported, only those which the portal provides in the FRIENDLY_URL request attribute.</li>
-</ol>
+<p>1: Not all the weird and wonderful formats of friendly URL are supported, only those which the portal provides in the FRIENDLY_URL request attribute.</p>
 
 <p>2: At present, Documents and Media and Documents and Media Display portlets are not supported. Use an Asset Publisher portlet instead.</p>
 
