Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@ flatThemeDisplay.put("url-portal", themeDisplay.getURLPortal());</p>
 
 <p>When first visiting the page, the tiny URL corresponds to the page. When a user enters the tiny URL into his browser, he will be taken to the same page with the asset publisher showing the abstracts.</p>
 
-<p>If you now click on an asset to show its full content, the tiny URL changes to correspond to that asset.
- When a user enters this tiny URL into his browser, he will be taken to the same page with the asset pub
-lisher showing that asset as full content.</p>
+<p>If you now click on an asset to show its full content, the tiny URL changes to correspond to that asset. When a user enters this tiny URL into his browser, he will be taken to the same page with the asset publisher showing that asset as full content.</p>
 
 <h3>
 <a id="maintenance" class="anchor" href="#maintenance" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Maintenance</h3>
@@ -116,6 +114,8 @@ lisher showing that asset as full content.</p>
 <p>1: Not all the weird and wonderful formats of friendly URL are supported, only those which the portal provides in the FRIENDLY_URL request attribute.</p>
 
 <p>2: At present, Documents and Media and Documents and Media Display portlets are not supported. Use an Asset Publisher portlet instead.</p>
+
+<p>3: At present only site scope is supported.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Hope-Consultants-International/tinyurl-portlet">Tiny URLs</a> is maintained by <a href="https://github.com/Hope-Consultants-International">Hope-Consultants-International</a>.</span>
