Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ flatThemeDisplay.put("url-portal", themeDisplay.getURLPortal());</p>
 
 <ul>
 <li>page</li>
-<li>web content article - web content display, asset publisher</li>
+<li>web content article - asset publisher</li>
 <li>blogs entry - blogs portlet, asset publisher</li>
 <li>documents and media file - asset publisher</li>
 <li>messageboard category and message - messageboards portlet, asset publisher</li>
